# tr-news-scraper

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  trnewsscraper.py
tr_news_scraper/: tr_news_scraper.py
