[tool.poetry]
name = "tr-news-scraper"
version = "0.1.0"
description = "tr-news-scraper is a Python library that allows users to scrape Turkish news articles based on specified keywords from multiple sources. It gather news content from various news websites, enabling users to extract valuable information for analysis or research purposes."
authors = ["Ogün Demir <ogundemir8@gmail.com>", "Aydoğan Avcı <aydogann22gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3',
        'Topic :: Software Development :: Libraries :: Python Modules'
    ]

packages = [
    { include = "tr_news_scraper" },
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.2"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
click = "8.1.7"
cssselect = "1.2.0"
feedfinder2 = "0.0.4"
feedparser = "6.0.11"
filelock = "3.13.1"
idna = "3.6"
jieba3k = "0.35.1"
joblib = "1.3.2"
lxml = "5.1.0"
newspaper3k = "0.2.8"
nltk = "3.8.1"
numpy = "1.26.3"
pandas = "2.1.4"
pillow = "10.2.0"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
regex = "2023.12.25"
requests = "2.31.0"
requests-file = "1.5.1"
sgmllib3k = "1.0.0"
six = "1.16.0"
soupsieve = "2.5"
tinysegmenter = "0.3"
tldextract = "5.1.1"
tqdm = "4.66.1"
tzdata = "2023.4"
urllib3 = "2.1.0"

[tool.poetry.urls]
homepage = "https://github.com/demirogun/tr-news-scraper"
repository = "https://pypi.org/project/tr-news-scraper/"
documentation = "https://github.com/demirogun/tr-news-scraper/blob/main/README.md"
issues = "https://github.com/demirogun/tr-news-scraper/issues"
github = "https://github.com/demirogun/tr-news-scraper"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
